# DicoGIS

./: .buildinfo  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  options_TPL.ini  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: dicogis.DicoGIS.doctree  dicogis.doctree  dicogis.georeaders.Infos_DWG.doctree  dicogis.georeaders.Infos_DXF.doctree  dicogis.georeaders.Infos_GDB.doctree  dicogis.georeaders.Infos_GXT.doctree  dicogis.georeaders.Infos_PostGIS.doctree  dicogis.georeaders.Infos_Rasters.doctree  dicogis.georeaders.Infos_Spatialite.doctree  dicogis.georeaders.Infos_VectorFlatDataset.doctree  dicogis.georeaders.doctree  dicogis.georeaders.gdal_exceptions_handler.doctree  dicogis.georeaders.geo_infos_generic.doctree  dicogis.georeaders.geoutils.doctree  dicogis.ui.doctree  dicogis.ui.misc_buttons.doctree  dicogis.ui.tab_credits.doctree  dicogis.ui.tab_database.doctree  dicogis.ui.tab_files.doctree  dicogis.ui.tab_settings.doctree  dicogis.utils.checknorris.doctree  dicogis.utils.db_conf_reader.doctree  dicogis.utils.doctree  dicogis.utils.journalizer.doctree  dicogis.utils.options.doctree  dicogis.utils.texts.doctree  dicogis.utils.utils.doctree  dicogis.xlwriter.doctree  dicogis.xlwriter.md2xlsx.doctree  modules.doctree
.doctrees/development/: documentation.doctree  packaging.doctree  tests.doctree  ubuntu.doctree  windows.doctree
.doctrees/introduction/: en.doctree  es.doctree  fr.doctree
.doctrees/misc/: compatibility.doctree  credits.doctree  formats_matrix.doctree
.github/: dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: 01-report-a-bug.yml  02-feature-request.yml  config.yml
.github/_archive/: builder_ubuntu.yml  builder_windows.yml  windows_linter_using_executables.yml
.github/workflows/: builder_releaser.yml  builder_ubuntu.yml  builder_windows.yml  codeql-analysis.yml  debian_builder.yml  docs_builder.yml  linter_ubuntu.yml  linter_windows_conda.yml  pr-auto-labeler.yml  pre-commit_autoupdate.yml  tester_ubuntu.yml  win_builder.yml  win_linter.yml
_apidoc/: dicogis.DicoGIS.html  dicogis.georeaders.Infos_DWG.html  dicogis.georeaders.Infos_DXF.html  dicogis.georeaders.Infos_GDB.html  dicogis.georeaders.Infos_GXT.html  dicogis.georeaders.Infos_PostGIS.html  dicogis.georeaders.Infos_Rasters.html  dicogis.georeaders.Infos_Spatialite.html  dicogis.georeaders.Infos_VectorFlatDataset.html  dicogis.georeaders.gdal_exceptions_handler.html  dicogis.georeaders.geo_infos_generic.html  dicogis.georeaders.geoutils.html  dicogis.georeaders.html  dicogis.html  dicogis.ui.html  dicogis.ui.misc_buttons.html  dicogis.ui.tab_credits.html  dicogis.ui.tab_database.html  dicogis.ui.tab_files.html  dicogis.ui.tab_settings.html  dicogis.utils.checknorris.html  dicogis.utils.db_conf_reader.html  dicogis.utils.html  dicogis.utils.journalizer.html  dicogis.utils.options.html  dicogis.utils.texts.html  dicogis.utils.utils.html  dicogis.xlwriter.html  dicogis.xlwriter.md2xlsx.html  modules.html
_modules/: index.html
_modules/dicogis/: DicoGIS.html
_sources/_apidoc/: dicogis.DicoGIS.rst.txt  dicogis.georeaders.Infos_DWG.rst.txt  dicogis.georeaders.Infos_DXF.rst.txt  dicogis.georeaders.Infos_GDB.rst.txt  dicogis.georeaders.Infos_GXT.rst.txt  dicogis.georeaders.Infos_PostGIS.rst.txt  dicogis.georeaders.Infos_Rasters.rst.txt  dicogis.georeaders.Infos_Spatialite.rst.txt  dicogis.georeaders.Infos_VectorFlatDataset.rst.txt  dicogis.georeaders.gdal_exceptions_handler.rst.txt  dicogis.georeaders.geo_infos_generic.rst.txt  dicogis.georeaders.geoutils.rst.txt  dicogis.georeaders.rst.txt  dicogis.rst.txt  dicogis.ui.misc_buttons.rst.txt  dicogis.ui.rst.txt  dicogis.ui.tab_credits.rst.txt  dicogis.ui.tab_database.rst.txt  dicogis.ui.tab_files.rst.txt  dicogis.ui.tab_settings.rst.txt  dicogis.utils.checknorris.rst.txt  dicogis.utils.db_conf_reader.rst.txt  dicogis.utils.journalizer.rst.txt  dicogis.utils.options.rst.txt  dicogis.utils.rst.txt  dicogis.utils.texts.rst.txt  dicogis.utils.utils.rst.txt  dicogis.xlwriter.md2xlsx.rst.txt  dicogis.xlwriter.rst.txt  modules.rst.txt
_sources/development/: packaging.md.txt  ubuntu.md.txt
_sources/introduction/: es.md.txt
builder/: pyinstaller_build_ubuntu.py  pyinstaller_build_ubuntu_cli.py  pyinstaller_build_ubuntu_gui.py  pyinstaller_build_windows.py  pyinstaller_build_windows_cli.py  pyinstaller_build_windows_gui.py  version_info_templater.py
development/: documentation.html  packaging.html  tests.html  ubuntu.html  windows.html
dicogis/: DicoGIS.py  __about__.py  __init__.py  constants.py  dicogis.py
dicogis/cli/: cmd_inventory.py  cmd_list.py  cmd_publish.py  main.py
dicogis/explorer/: __init__.py  formats_matrix.py  formats_yaml_parser.py  geofiles_seeker.py
dicogis/export/: base_serializer.py  md2xlsx.py  to_json.py  to_xlsx.py
dicogis/georeaders/: Infos_DWG.py  Infos_DXF.py  Infos_GDB.py  Infos_GXT.py  Infos_GeoServer.py  Infos_PostGIS.py  Infos_QGS.py  Infos_Rasters.py  Infos_Spatialite.py  Infos_VectorFlatDataset.py  __init__.py  base_georeader.py  gdal_exceptions_handler.py  geo_infos_generic.py  geoutils.py  process_files.py  read_dxf.py  read_esri_filegdb.py  (+6 more)
docs/: Makefile  compatibility.md  conf.py  index.md  index.rst  robots.txt  settings.md
introduction/: en.html  es.html  fr.html
misc/: compatibility.html  credits.html  formats_matrix.html
requirements/: base.txt  conda-env-dev.yml  constraints.txt  dev.txt  development.txt  docs.txt  documentation.txt  packaging.txt  testing.txt  ubuntu.txt  windows.txt
tests/: test_about.py  test_database_connection.py  test_dbconf_reader.py  test_georeader_postgis.py  test_georeader_raster.py  test_infos_shp.py  test_infos_vector.py  test_journalizer.py  test_locale_loader.py  test_utils_check_path.py  test_utils_environment.py  test_utils_formatters.py  test_utils_slugifier.py  test_utils_str2bool.py
(+97 files in other folders)
